# slicot.c

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  TEST_IMPROVEMENTS_SUMMARY.md  TEST_REVIEW.md  TODO_TRANSLATION.md  old_CLAUDE.md  python.supp  requirements-dev.txt  requirements.txt  setup.py  test_mb04id_debug.py
.claude/: settings.local.json
.claude/agents/: parallel-workflow-orchestrator.md  slicot-fortran-translator.md
.claude/skills/slicot-knowledge/: SKILL.md
.claude/skills/slicot-knowledge/references/: html-documentation-structure.md  lapack-integration-standards.md  routine-dependencies.md  slicot-library-overview.md  test-data-parsing.md
.devcontainer/: README.md  devcontainer.json
.factory/droids/: parallel-workflow-orchestrator.md  slicot-fortran-translator.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
_codeql_build_dir/: CTestTestfile.cmake
_codeql_build_dir/examples/: CTestTestfile.cmake
_codeql_build_dir/include/: slicot_config.h
_codeql_build_dir/src/: libslicot.so.0  libslicot.so.0.1.0
_codeql_build_dir/tests/: CTestTestfile.cmake
_codeql_build_dir/tests/integration/: CTestTestfile.cmake
docs/: function_pointers.md  ib03bd_dependencies.txt  ib03bd_dependency_chain.txt  ib03bd_translation_order.md
examples/: CMakeLists.txt
fortran_diag/: CMakeLists.txt  README.md
fortran_diag/c/: ab13md_diag.c  sg03bd_diag.c
fortran_diag/cmake/: DiagnosticTargets.cmake
fortran_diag/fortran/: ab13md_diag.f  sg03bd_diag.f
fortran_diag/output/: sg03bd_c_trace.txt  sg03bd_fortran_trace.txt
fortran_diag/scripts/: compare.py
fortran_diag/templates/: skeleton.c  skeleton.f
include/: slicot.h  slicot_blas.h  slicot_config.h.in  slicot_types.h
python/: slicot_module.c
python/slicot/: __init__.py
scripts/: setup_venv.sh
src/: CMakeLists.txt
src/AB/: ab04md.c  ab05nd.c  ab07nd.c  ab13md.c
src/DG/: dg01md.c
src/IB/: ib01bd.c  ib01md.c  ib01pd.c  ib01qd.c  ib03bd.c
src/MA/: ma02ad.c
src/MB/: mb01qd.c  mb01rb.c  mb01rx.c  mb01uy.c  mb02yd.c  mb03od.c  mb03oy.c  mb04od.c  mb04oy.c  mb04py.c
src/MD/: md03bd.c  md03bx.c  md03by.c
src/NF/: nf01ay.c  nf01bp.c  nf01bq.c  nf01br.c  nf01bs.c
src/SB/: sb02rd.c  sb02ru.c  sb03od.c  sb10jd.c
src/SG/: sg03bd.c  sg03br.c  sg03bu.c  sg03bv.c  sg03bw.c  sg03bx.c
src/TB/: tb01vy.c  tb01wd.c  tb01xd.c
src/TF/: tf01mx.c
src/TG/: tg01fd.c
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/python/: conftest.py  test_ab04md.py  test_ab05md.py  test_ab05nd.py  test_ab05od.py  test_ab05qd.py  test_ab07md.py  test_ab07nd.py  test_ab13md.py  test_de01od.py  test_dg01md.py  test_dk01md.py  test_ib01ad.py  test_ib01bd.py  test_ib01md.py  test_ib01nd.py  test_ib01qd.py  test_ib03bd.py  test_ma02ad.py  test_mb01pd.py  test_mb01rb.py  test_mb01rx.py  test_mb01sd.py  test_mb01td.py  test_mb01uy.py  test_mb02ud.py  test_mb02yd.py  test_mb03od.py  test_mb03oy.py  test_mb03ud.py  test_mb04id.py  test_mb04iy.py  test_mb04kd.py  test_mb04od.py  test_mb04ow.py  test_mb04oy.py  test_mb04py.py  test_mb04zd.py  test_mb05my.py  test_mb05nd.py  (+31 more)
tests/python/data/: ib01_html_example_data.npz  ib03bd_test_data.npz
tests/unit/: CMakeLists.txt  test_mb01qd.cpp
tools/: README.md  extract_dependencies.py  generate_diagnostic.sh  rebase_worktrees.sh
